--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cloudinary": "^2.7.0",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
-    "openai": "^5.19.1"
+    "openai": "^5.20.0"
   }
 }
