--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,17 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
-    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "openai": "^5.20.0"
   }
